--- a/wantedalways-system/package.json
+++ b/wantedalways-system/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "vue": "^2.6.14",
@@ -18,6 +19,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.2",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
