--- a/wantedalways-system/package.json
+++ b/wantedalways-system/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve --mode development",
+    "serve": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -11,6 +12,7 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "vue": "^2.6.14",
+    "vue-ls": "^4.2.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
