--- a/wantedalways-system/package.json
+++ b/wantedalways-system/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.6.14",
     "vue-ls": "^4.2.0",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "nprogress": "0.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
